tests/paczka1/fuzzy1/55757687.err
Error in line 2: jSAVpVOuu S196 48,9
Error in line 3: bv7O7 A531 47,1
Error in line 4: jSAVpVOuu S741 47,8
Error in line 13: bv7O7 S196 33,4
Error in line 33: ldFQ3BoNdo S741 16,7
Error in line 31: bv7O7 A531 58,6
